force-app/main/default/objects/Property_Title__c/Property_Title__c.object-meta.xml
<CustomObject>
    <label>Property Title</label>
    <nameField>
        <label>Property Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Titles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>