force-app/main/default/objects/Property_Title__c/fields/HOACompletedDate__c.field-meta.xml
<CustomField>
    <fullName>HOACompletedDate__c</fullName>
    <label>HOA Completed Date</label>
    <type>Date</type>
</CustomField>