force-app/main/default/objects/Property_Title__c/fields/HOAExists__c.field-meta.xml
<CustomField>
    <fullName>HOAExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA Exists</label>
    <type>Checkbox</type>
</CustomField>