force-app/main/default/objects/Property_Title__c/fields/HOAOrderedDate__c.field-meta.xml
<CustomField>
    <fullName>HOAOrderedDate__c</fullName>
    <label>HOA Ordered Date</label>
    <type>Date</type>
</CustomField>