force-app/main/default/objects/Property_Title__c/fields/LatestTitleClearedDate__c.field-meta.xml
<CustomField>
    <fullName>LatestTitleClearedDate__c</fullName>
    <label>Latest Title Cleared Date</label>
    <type>Date</type>
</CustomField>