force-app/main/default/objects/Property_Title__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>