force-app/main/default/objects/Property_Title__c/fields/OrderOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>OrderOpenedDate__c</fullName>
    <label>Order Opened Date</label>
    <type>DateTime</type>
</CustomField>