force-app/main/default/objects/Property_Title__c/fields/OriginalTitleClearedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalTitleClearedDate__c</fullName>
    <label>Original Title Cleared Date</label>
    <type>Date</type>
</CustomField>