force-app/main/default/objects/Property_Title__c/fields/PayoffCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>PayoffCompletedDate__c</fullName>
    <label>Payoff Completed Date</label>
    <type>Date</type>
</CustomField>