force-app/main/default/objects/Property_Title__c/fields/PayoffExists__c.field-meta.xml
<CustomField>
    <fullName>PayoffExists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payoff Exists</label>
    <type>Checkbox</type>
</CustomField>