force-app/main/default/objects/Property_Title__c/fields/PayoffOrderedDate__c.field-meta.xml
<CustomField>
    <fullName>PayoffOrderedDate__c</fullName>
    <label>Payoff Ordered Date</label>
    <type>Date</type>
</CustomField>