force-app/main/default/objects/Property_Title__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Property Titles</relationshipLabel>
    <relationshipName>Property_Titles</relationshipName>
    <type>Lookup</type>
</CustomField>