force-app/main/default/objects/Property_Title__c/fields/Property_Active_on_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Property_Active_on_Salesforce__c</fullName>
    <formula>OR(NOT(ISPICKVAL(Property__r.Status__c, &apos;Cancelled&apos;)), NOT(ISPICKVAL(Property__r.Status__c, &apos;Inactive&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Active on Salesforce</label>
    <type>Checkbox</type>
</CustomField>