force-app/main/default/objects/Property_Title__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Confirmed</fullName>
            </value>
            <value>
                <fullName>Order Change Requested</fullName>
            </value>
            <value>
                <fullName>Order Change Confirmed</fullName>
            </value>
            <value>
                <fullName>Order Change Failed</fullName>
            </value>
            <value>
                <fullName>Loan Portfolio Change Required</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>