force-app/main/default/objects/Property_Title__c/fields/Status_Mismatched__c.field-meta.xml
<CustomField>
    <fullName>Status_Mismatched__c</fullName>
    <formula>OR(
  Property_Active_on_Salesforce__c = true &amp;&amp; ISPICKVAL(Vendor_Property_Status__c, &apos;Active&apos;),
  Property_Active_on_Salesforce__c = false &amp;&amp; ISPICKVAL(Vendor_Property_Status__c, &apos;Inactive&apos;)
)</formula>
    <label>Status Mismatched</label>
    <type>Checkbox</type>
</CustomField>