force-app/main/default/objects/Property_Title__c/fields/TaxesCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>TaxesCompletedDate__c</fullName>
    <label>Taxes Completed Date</label>
    <type>Date</type>
</CustomField>