force-app/main/default/objects/Property_Title__c/fields/TaxesOrderedDate__c.field-meta.xml
<CustomField>
    <fullName>TaxesOrderedDate__c</fullName>
    <label>Taxes Ordered Date</label>
    <type>Date</type>
</CustomField>