force-app/main/default/objects/Property_Title__c/fields/Title_Order__c.field-meta.xml
<CustomField>
    <fullName>Title_Order__c</fullName>
    <label>Title Order</label>
    <referenceTo>Title_Order__c</referenceTo>
    <relationshipLabel>Property Titles</relationshipLabel>
    <relationshipName>Property_Titles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>