force-app/main/default/objects/Property_Title__c/fields/TitleCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>TitleCompleteDate__c</fullName>
    <label>Title Complete Date</label>
    <type>Date</type>
</CustomField>