force-app/main/default/objects/Property_Title__c/fields/Vendor_Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Property_Status__c</fullName>
    <label>Vendor Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Action Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>